[package]
name = "bmbp_dev"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "开发工具"
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
[dependencies]
salvo = { workspace = true }
