[package]
name = "bmbp_dev_deploy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "部署工具"
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
