[package]
name = "bmbp_dev_manage"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "管理工具"
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
[dependencies]

bmbp_app_common = { path = "../bmbp_app_common" }
bmbp_app_utils = { path = "../bmbp_app_utils" }
bmbp_rdbc_orm = { path = "../bmbp_rdbc_orm" }
bmbp_marco_rdbc = { path = "../bmbp_marco_rdbc" }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
salvo = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
