[package]
name = "bmbp_dev_meta"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "元数据定义"
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
