[package]
name = "bmbp_dev_runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "运行时"
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
[dependencies]
salvo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
svg = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
